test/Fail/Issue8596b.err
Issue8596b.agda:9.1-14.17: error: [TerminationIssue]
Termination checking failed for the following function:
  r
Problematic call:
  r (at Issue8596b.agda:14.16-17)
